
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_12__ TYPE_1__ ;


typedef char WCHAR ;
struct TYPE_12__ {int * pCursors; } ;
typedef TYPE_1__ ME_TextEditor ;
typedef int ME_Style ;
typedef int BOOL ;


 int FALSE ;
 int ME_ClearTempStyle (TYPE_1__*) ;
 int ME_CommitUndo (TYPE_1__*) ;
 int ME_EmptyUndoStack (TYPE_1__*) ;
 int * ME_GetSelectionInsertStyle (TYPE_1__*) ;
 int ME_GetSelectionOfs (TYPE_1__*,int*,int*) ;
 int ME_InsertTextFromCursor (TYPE_1__*,int ,char const*,int,int *) ;
 int ME_InternalDeleteText (TYPE_1__*,int *,int,int ) ;
 int ME_ReleaseStyle (int *) ;
 int ME_UpdateRepaint (TYPE_1__*,int ) ;
 int ME_UpdateSelectionLinkAttribute (TYPE_1__*) ;

void ME_ReplaceSel(ME_TextEditor *editor, BOOL can_undo, const WCHAR *str, int len)
{
  int from, to, nStartCursor;
  ME_Style *style;

  nStartCursor = ME_GetSelectionOfs(editor, &from, &to);
  style = ME_GetSelectionInsertStyle(editor);
  ME_InternalDeleteText(editor, &editor->pCursors[nStartCursor], to-from, FALSE);
  ME_InsertTextFromCursor(editor, 0, str, len, style);
  ME_ReleaseStyle(style);





  if (len>0 && str[len-1] == '\n')
    ME_ClearTempStyle(editor);
  ME_CommitUndo(editor);
  ME_UpdateSelectionLinkAttribute(editor);
  if (!can_undo)
    ME_EmptyUndoStack(editor);
  ME_UpdateRepaint(editor, FALSE);
}
