; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/riched20/extr_editor.c_ME_ReplaceSel.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/riched20/extr_editor.c_ME_ReplaceSel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i32* }

@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ME_ReplaceSel(%struct.TYPE_12__* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.TYPE_12__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  store %struct.TYPE_12__* %0, %struct.TYPE_12__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %13 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %14 = call i32 @ME_GetSelectionOfs(%struct.TYPE_12__* %13, i32* %9, i32* %10)
  store i32 %14, i32* %11, align 4
  %15 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %16 = call i32* @ME_GetSelectionInsertStyle(%struct.TYPE_12__* %15)
  store i32* %16, i32** %12, align 8
  %17 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %18 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %19 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = load i32, i32* %11, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i32, i32* %20, i64 %22
  %24 = load i32, i32* %10, align 4
  %25 = load i32, i32* %9, align 4
  %26 = sub nsw i32 %24, %25
  %27 = load i32, i32* @FALSE, align 4
  %28 = call i32 @ME_InternalDeleteText(%struct.TYPE_12__* %17, i32* %23, i32 %26, i32 %27)
  %29 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %30 = load i8*, i8** %7, align 8
  %31 = load i32, i32* %8, align 4
  %32 = load i32*, i32** %12, align 8
  %33 = call i32 @ME_InsertTextFromCursor(%struct.TYPE_12__* %29, i32 0, i8* %30, i32 %31, i32* %32)
  %34 = load i32*, i32** %12, align 8
  %35 = call i32 @ME_ReleaseStyle(i32* %34)
  %36 = load i32, i32* %8, align 4
  %37 = icmp sgt i32 %36, 0
  br i1 %37, label %38, label %50

38:                                               ; preds = %4
  %39 = load i8*, i8** %7, align 8
  %40 = load i32, i32* %8, align 4
  %41 = sub nsw i32 %40, 1
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds i8, i8* %39, i64 %42
  %44 = load i8, i8* %43, align 1
  %45 = sext i8 %44 to i32
  %46 = icmp eq i32 %45, 10
  br i1 %46, label %47, label %50

47:                                               ; preds = %38
  %48 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %49 = call i32 @ME_ClearTempStyle(%struct.TYPE_12__* %48)
  br label %50

50:                                               ; preds = %47, %38, %4
  %51 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %52 = call i32 @ME_CommitUndo(%struct.TYPE_12__* %51)
  %53 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %54 = call i32 @ME_UpdateSelectionLinkAttribute(%struct.TYPE_12__* %53)
  %55 = load i32, i32* %6, align 4
  %56 = icmp ne i32 %55, 0
  br i1 %56, label %60, label %57

57:                                               ; preds = %50
  %58 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %59 = call i32 @ME_EmptyUndoStack(%struct.TYPE_12__* %58)
  br label %60

60:                                               ; preds = %57, %50
  %61 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %62 = load i32, i32* @FALSE, align 4
  %63 = call i32 @ME_UpdateRepaint(%struct.TYPE_12__* %61, i32 %62)
  ret void
}

declare dso_local i32 @ME_GetSelectionOfs(%struct.TYPE_12__*, i32*, i32*) #1

declare dso_local i32* @ME_GetSelectionInsertStyle(%struct.TYPE_12__*) #1

declare dso_local i32 @ME_InternalDeleteText(%struct.TYPE_12__*, i32*, i32, i32) #1

declare dso_local i32 @ME_InsertTextFromCursor(%struct.TYPE_12__*, i32, i8*, i32, i32*) #1

declare dso_local i32 @ME_ReleaseStyle(i32*) #1

declare dso_local i32 @ME_ClearTempStyle(%struct.TYPE_12__*) #1

declare dso_local i32 @ME_CommitUndo(%struct.TYPE_12__*) #1

declare dso_local i32 @ME_UpdateSelectionLinkAttribute(%struct.TYPE_12__*) #1

declare dso_local i32 @ME_EmptyUndoStack(%struct.TYPE_12__*) #1

declare dso_local i32 @ME_UpdateRepaint(%struct.TYPE_12__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
